--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,8 @@
 <% layout('layouts/boilerplate')%>
     <link rel="stylesheet" href="/stylesheets/stars.css">
 
+
+
     <div class="row">
         <div class="col-6">
             <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
@@ -56,6 +58,8 @@
 
         </div>
         <div class="col-6">
+            <div id='map' style='width: 100%; height: 300px;'></div>
+
             <% if(currentUser){ %>
                 <h2>Leave a Review</h2>
                 <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form"
@@ -113,3 +117,10 @@
                         <% } %>
         </div>
     </div>
+
+    <script>
+        const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+        const campground = <% - JSON.stringify(campground) %>
+    </script>
+
+    <script src="/javascripts/showPageMap.js"></script>
