--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,7 @@
 
 
     <footer class="mt-auto text-white-50">
-      <p>&copy; 2020 </p>
+      <p>&copy; Wechuli 2022 </p>
     </footer>
 
   </div>
