--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -12,7 +12,7 @@
                             <% }else {%>
                                 <img class="img-fluid" alt=""
                                     src="https://res.cloudinary.com/douqbebwk/image/upload/v1600103881/YelpCamp/lz8jjv2gyynjil7lswf4.png"
-                                    crossorigin>
+                                    crossorigin> //placeholder
                                 <% } %>
                     </div>
                     <div class="col-md-8">
@@ -39,7 +39,7 @@
     </div>
     <script>
         const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-        const campgrounds = { features: <% - JSON.stringify(campgrounds) %>}
+        const campgrounds = { features: <% - JSON.stringify(campgrounds) %>} // I will find a fix, this is not rendering
     </script>
 
     <script src="/javascripts/clusterMap.js"></script>
