--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -117,7 +117,7 @@
 
     <script>
         const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-        const campground = <% - JSON.stringify(campground) %>
+        const campground = <%-JSON.stringify(campground)%> //I will find a fix, this is not rendering
     </script>
 
     <script src="/javascripts/showPageMap.js"></script>
