--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label for="formFile" class="form-labelsm" for="image">Add more images</label>
+                        <label for="formFile" class="form-labels" for="image">Add more images</label>
                         <input class="form-control" type="file" id="image" name="campground[image]" multiple>
                     </div>
                     <div class="mb3">
