--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
 
     <main class="px-3">
       <h1>YelpCamp</h1>
-      <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
+      <p class="lead"> Welcome to YelpCamp! <br> Join us and explore our many campgrounds. <br>
           Feel free to share some of your own and comment on others!</p>
       <a href="/campgrounds" class="btn btn-lg btn-success font-weight-bold">View
           Campgrounds</a>
