--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,7 @@
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/home.css">
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏕</text></svg>">
+  <link rel="manifest" href="/manifest.json">
 </head>
 
 <body class="d-flex text-center text-white bg-dark">
